--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1 class="title">Skilful Buddies</h1>
+  <h1 class="title">Skill Buddies</h1>
   <div class="pinned-right">
     <span class="block">
       <a [routerLink]="['/']">
