feat: add sign-up page

--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,4 +1,4 @@
-<template-header></template-header>
+<template-header [active]="'search'"></template-header>
 
 <div class="container">
   <form class="search" [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
