--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -17,14 +17,14 @@
   </div>
   <div class="underline">
     <ul>
-      <li class="active">
-        <a [routerLink]="['/']">Search</a>
+      <li [ngClass]="{'active': active == 'search'}">
+        <a [routerLink]="['/search']">Search</a>
       </li>
-      <li>
-        <a [routerLink]="['/']">Connect</a>
+      <li [ngClass]="{'active': active == 'connect'}">
+        <a [routerLink]="['/connect']">Connect</a>
       </li>
-      <li>
-        <a [routerLink]="['/']">Trade</a>
+      <li [ngClass]="{'active': active == 'trade'}">
+        <a [routerLink]="['/trade']">Trade</a>
       </li>
     </ul>
   </div>
