feat: add trade page

--- a/src/app/pages/connect/connect.component.html
+++ b/src/app/pages/connect/connect.component.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="row justify-content-center" *ngIf="!cards">
-  <p class="text-center grey">
+  <p class="text-center text-muted">
     Find your friends on the most known social platforms<br />
     <i class="fa fa-fw fa-google-plus hover-google" aria-hidden="true"></i>
     <i class="fa fa-fw fa-facebook hover-facebook" aria-hidden="true"></i>
