--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -98,7 +98,7 @@
       <div class="col-sm-4">
         <div class="bordered blue">
           <h4>Local shop</h4>
-          <p class="price">$ 9,- per month</p>
+          <p class="price">from $ 0,1 per ad</p>
           <hr class="hr" />
           <p class="sub">
             <span class="limit">Advertise your trade</span>
@@ -122,7 +122,7 @@
       <div class="col-sm-4">
         <div class="bordered gold">
           <h4>Company</h4>
-          <p class="price">$ 99,- per month</p>
+          <p class="price">from $ 29,- per month</p>
           <hr class="hr" />
           <p class="sub">
             <span class="limit">Reach everybody</span>
