--- a/src/app/pages/trade/trade.component.html
+++ b/src/app/pages/trade/trade.component.html
@@ -19,10 +19,15 @@
       </div>
     </div>
   </form>
-</div>
 
-<div class="row justify-content-center" *ngIf="!cards">
-  <p class="text-center text-muted">
-    Discover all the trades made by your friends buddies<br />
-  </p>
+  <div class="row justify-content-center" *ngIf="!cards">
+    <p class="text-center text-muted">
+      Discover all the trades made by your friends buddies<br />
+    </p>
+  </div>
+
+  <div class="row justify-content-center">
+    <template-card-result [card]="card" [type]="'trade'" *ngFor="let card of cards"
+      class="col-sm-10 my-1"></template-card-result>
+  </div>
 </div>
