--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -6,6 +6,7 @@
         <i class="fa fa-fw fa-lg fa-user" aria-hidden="true"></i>
         <i class="fa fa-fw fa-lg fa-bell" aria-hidden="true"></i>
         <i class="fa fa-fw fa-lg fa-comments" aria-hidden="true"></i>
+        <i class="fa fa-fw fa-circle" aria-hidden="true"></i>
       </a>
     </span>
     <span class="block">
@@ -25,7 +26,6 @@
           </button>
         </div>
       </div>
-
 
     </span>
   </div>
