--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -2,6 +2,7 @@ $silver: rgb(250,250,250);
 
 header {
   box-shadow: 1px 2px 5px rgba(200,200,200,0.4);
+  background-color: white;
   .title {
     padding: 0 10px;
     margin: 0;
