--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -2,12 +2,9 @@
   <h1 class="title skilful-buddies">Skill Buddies</h1>
   <div class="pinned-right">
     <span class="block">
-      <a [routerLink]="['/']">
-        <i class="fa fa-fw fa-lg fa-user" aria-hidden="true"></i>
-        <i class="fa fa-fw fa-lg fa-bell" aria-hidden="true"></i>
-        <i class="fa fa-fw fa-lg fa-comments" aria-hidden="true"></i>
-        <i class="fa fa-fw fa-circle" aria-hidden="true"></i>
-      </a>
+      <template-notification [type]="'user'" [isNotified]="true"></template-notification>
+      <template-notification [type]="'bell'" [isNotified]="false"></template-notification>
+      <template-notification [type]="'comments'" [isNotified]="false"></template-notification>
     </span>
     <span class="block">
       <div ngbDropdown class="d-inline-block">
