--- a/src/app/pages/trade/trade.component.html
+++ b/src/app/pages/trade/trade.component.html
@@ -1,33 +1,36 @@
-<template-header [active]="'trade'"></template-header>
+<div class="above">
+  <template-header [active]="'trade'"></template-header>
 
-<div class="container">
-  <form class="search" [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
-    <div class="form-row align-items-center justify-content-center">
-      <div class="col-sm-10">
-        <div class="input-group my-5">
-          <input type="text" class="form-control form-control-lg"
-            formControlName="search"
-            [ngbTypeahead]="searchResult"
-            (selectItem)="itemSelected($event)"
-            placeholder="Find what trades your friends are in">
-          <span class="input-group-btn">
-            <button class="btn btn-warning">
-            <i class="fa fa-search" aria-hidden="true"></i>
-            </button>
-          </span>
+  <div class="container">
+    <form class="search" [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
+      <div class="form-row align-items-center justify-content-center">
+        <div class="col-sm-10">
+          <div class="input-group my-5">
+            <input type="text" class="form-control form-control-lg"
+              formControlName="search"
+              [ngbTypeahead]="searchResult"
+              (selectItem)="itemSelected($event)"
+              placeholder="Find what trades your friends are in">
+            <span class="input-group-btn">
+              <button class="btn btn-warning">
+              <i class="fa fa-search" aria-hidden="true"></i>
+              </button>
+            </span>
+          </div>
         </div>
       </div>
+    </form>
+
+    <div class="row justify-content-center" *ngIf="!cards">
+      <p class="text-center text-muted">
+        Discover all the trades made by your friends buddies<br />
+      </p>
     </div>
-  </form>
 
-  <div class="row justify-content-center" *ngIf="!cards">
-    <p class="text-center text-muted">
-      Discover all the trades made by your friends buddies<br />
-    </p>
+    <div class="row justify-content-center">
+      <template-card-result [card]="card" [type]="'trade'" *ngFor="let card of cards"
+        class="col-sm-10 my-1"></template-card-result>
+    </div>
   </div>
 
-  <div class="row justify-content-center">
-    <template-card-result [card]="card" [type]="'trade'" *ngFor="let card of cards"
-      class="col-sm-10 my-1"></template-card-result>
-  </div>
 </div>
