--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -1,8 +1,15 @@
 $silver: rgb(250,250,250);
+@mixin grey {
+  background: rgb(255,255,255);
+  background: -moz-linear-gradient(-45deg,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%);
+  background: -webkit-linear-gradient(-45deg,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%);
+  background: linear-gradient(135deg,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=1 );
+}
 
 header {
   box-shadow: 1px 2px 5px rgba(200,200,200,0.4);
-  background-color: white;
+  @include grey;
   .title {
     padding: 0 10px;
     margin: 0;
@@ -13,6 +20,7 @@ header {
     position: absolute;
     top: 0;
     right: 0;
+    color: grey;
     img {
       height: 45px;
       border-radius: 100%;
@@ -22,11 +30,6 @@ header {
     }
     a:hover {
       text-decoration: none;
-    }
-    .fa-user:hover,
-    .fa-bell:hover,
-    .fa-comments:hover {
-      color: orangered;
     }
   }
   .block {
