--- a/src/app/templates/notification/notification.component.html
+++ b/src/app/templates/notification/notification.component.html
@@ -1,4 +1,24 @@
-<a [routerLink]="[url]" class="notification">
-  <i class="fa fa-lg fa-fw" [ngClass]="type" aria-hidden="true"></i>
-  <i class="fa fa-circle" aria-hidden="true" *ngIf="isNotified"></i>
-</a>
+<div ngbDropdown class="notification">
+  <div>
+    <i class="fa fa-lg fa-fw" [ngClass]="type" aria-hidden="true"></i>
+    <i class="fa fa-circle" aria-hidden="true" *ngIf="isNotified"></i>
+  </div>
+  <div *ngIf="menuOpened" class="menu">
+    <ul>
+      <li>
+        Item 1
+        <span class="box-elements">
+          <i class="fa fa-fw fa-circle-o" aria-hidden="true"></i>
+          <i class="fa fa-fw fa-times" aria-hidden="true"></i>
+        </span>
+      </li>
+      <li>
+        Item 2
+        <span class="box-elements">
+          <i class="fa fa-fw fa-circle-o" aria-hidden="true"></i>
+          <i class="fa fa-fw fa-times" aria-hidden="true"></i>
+        </span>
+      </li>
+    </ul>
+  </div>
+</div>
