feat: add minimal chat page

--- a/src/app/templates/notification/notification.component.html
+++ b/src/app/templates/notification/notification.component.html
@@ -5,7 +5,8 @@
   </div>
   <div *ngIf="menuOpened" class="menu">
     <p *ngIf=!isNotified>
-      No notitifications...
+      No notitifications...<br />
+      <a [routerLink]="['/chat']">go to chat panel</a>
     </p>
     <ul *ngIf="isNotified">
       <li *ngFor="let notification of notifications; let i = index" [ngClass]="{ 'active': !notification.read }">
