--- a/src/app/templates/notification/notification.component.scss
+++ b/src/app/templates/notification/notification.component.scss
@@ -31,7 +31,11 @@ a:hover {
     box-shadow: 0 1px 4px rgba(0,0,0,0.4);
     z-index: 100;
     p {
-      padding: 0 5px;
+      padding: 20px 5px 0 5px;
+      line-height: normal;
+      a {
+        color: royalblue;
+      }
     }
     ul {
       list-style-type: none;
