chore: improve chat style

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,8 +1,59 @@
+<template-header [active]="'chat'" class="top"></template-header>
 <div class="above">
-  <template-header [active]="'chat'"></template-header>
   <div class="row no-gutters">
     <div class="col-sm-8">
-      CENTER
+      <div class="chatbox chatbox-left">
+        <div class="line">
+          <img src="/assets/img/richard.jpg" />
+          <p class="colored">
+            To take a trivial example
+          </p>
+          <p class="date">
+            12:51
+          </p>
+        </div>
+      </div>
+      <div class="chatbox chatbox-left">
+        <div class="line">
+          <img src="/assets/img/richard.jpg" />
+          <p class="colored">
+            To take a trivial example<br />
+            lol again...
+          </p>
+          <p class="date">
+            12:51
+          </p>
+        </div>
+      </div>
+      <div class="chatbox chatbox-left">
+        <div class="line">
+          <img src="/assets/img/richard.jpg" />
+          <p class="colored">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+          <p class="date">
+            12:52
+          </p>
+        </div>
+      </div>
+      <div class="chatbox chatbox-right">
+        <div class="line">
+          <img src="/assets/img/erlich.jpg" />
+          <p class="colored">
+            Arsehole!
+          </p>
+          <p class="date">
+            12:57
+          </p>
+        </div>
+      </div>
+      <div class="text-box">
+        <form>
+          <div class="form-group">
+            <textarea class="form-control"></textarea>
+          </div>
+        </form>
+      </div>
     </div>
     <div class="col-sm-4 right">
       <div class="people-card">
