--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -8,6 +8,7 @@ $silver: rgb(250,250,250);
 }
 
 header {
+  position: relative;
   box-shadow: 1px 2px 5px rgba(200,200,200,0.4);
   @include grey;
   .title {
