feat: improve chat style

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,7 +1,7 @@
 <template-header [active]="'chat'" class="top"></template-header>
 <div class="above">
   <div class="row no-gutters">
-    <div class="col-sm-8">
+    <div class="col-sm-8 p-3">
       <div class="chatbox chatbox-left">
         <div class="line">
           <img src="/assets/img/richard.jpg" />
@@ -40,6 +40,17 @@
         <div class="line">
           <img src="/assets/img/erlich.jpg" />
           <p class="colored">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+          <p class="date">
+            12:52
+          </p>
+        </div>
+      </div>
+      <div class="chatbox chatbox-right">
+        <div class="line">
+          <img src="/assets/img/erlich.jpg" />
+          <p class="colored">
             Arsehole!
           </p>
           <p class="date">
@@ -51,6 +62,7 @@
         <form>
           <div class="form-group">
             <textarea class="form-control"></textarea>
+            <button type="submit" class="btn btn-warning">Reply</button>
           </div>
         </form>
       </div>
