chore: improve style chat

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -68,12 +68,36 @@
       </div>
     </div>
     <div class="col-sm-4 right">
-      <div class="people-card">
+      <div class="header">
+        <h3>Messages</h3>
+        <p class="actions">
+          <i class="fa fa-fw fa-pencil-square-o"></i>
+        </p>
+      </div>
+      <div class="people-card people-active">
         <p class="image">
           <img src="/assets/img/richard.jpg" />
         </p>
         <h3>Invitation</h3>
-        <p>
+        <p class="subtext">
+          I'd like to join your trade network
+        </p>
+      </div>
+      <div class="people-card">
+        <p class="image">
+          <img src="/assets/img/gilfoyle.jpg" />
+        </p>
+        <h3>Not interested</h3>
+        <p class="subtext">
+          Your job proposal is bad.
+        </p>
+      </div>
+      <div class="people-card">
+        <p class="image">
+          <img src="/assets/img/gilfoyle.jpg" />
+        </p>
+        <h3>Invitation</h3>
+        <p class="subtext">
           I'd like to join your trade network
         </p>
       </div>
