--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -13,21 +13,49 @@
 }
 
 .right {
-  border-left: solid 1px grey;
+  border-left: solid 2px rgb(250,250,250);
+  background-color: rgb(250,250,250);
+}
+
+.header {
+  padding: 5px;
+  background-color: white;
+  color: rgba(0,0,0,0.6);
+  border-bottom: solid 2px rgb(250,250,250);
+  .actions {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 1.75rem;
+  }
 }
 
 .people-card {
-  border-bottom: solid 1px grey;
+  border-bottom: solid 2px rgb(250,250,250);
+  background-color: white;
+  padding: 5px;
   p.image {
     display: block;
     float: left;
     margin: 0;
+    margin-right: 5px;
     font-size: 0.9em;
     text-align: center;
     img {
       height: 55px;
     }
   }
+  h3 {
+    margin-top: -5px;
+  }
+  .subtext {
+    margin: 0;
+  }
+}
+
+.people-active {
+  background-color: rgba(255,69,0,0.7);
+  color: white;
 }
 
 .chatbox {
