--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -30,6 +30,12 @@
   }
 }
 
+.loading-headers {
+  color: rgba(0,0,0,0.6);
+  text-align: center;
+  padding: 20px;
+}
+
 .people-card {
   border-bottom: solid 2px rgb(250,250,250);
   background-color: white;
