--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -7,6 +7,15 @@
   height: 100%;
 }
 
+.left {
+  height: 100%;
+}
+
+.scroll {
+  max-height: 100%;
+  overflow: scroll;
+}
+
 .top {
   position: fixed;
   width: 100vw;
@@ -36,6 +45,12 @@
   padding: 20px;
 }
 
+.chat-header {
+  padding: 30px;
+  text-align: center;
+  color: rgba(0,0,0,0.6);
+}
+
 .people-card {
   border-bottom: solid 2px rgb(250,250,250);
   background-color: white;
@@ -48,20 +63,33 @@
     font-size: 0.9em;
     text-align: center;
     img {
-      height: 55px;
+      height: 60px;
     }
   }
-  h3 {
+  p {
+    margin-bottom: 0;
+  }
+  .name,
+  .subtext,
+  .last {
+    margin: 0;
+  }
+  .name {
     margin-top: -5px;
   }
-  .subtext {
-    margin: 0;
+  .subtext,
+  .last {
+    color: grey;
   }
 }
 
 .people-active {
   background-color: rgba(255,69,0,0.7);
   color: white;
+  .subtext,
+  .last {
+    color: rgb(230,230,230);
+  }
 }
 
 .chatbox {
@@ -136,6 +164,8 @@
   left: 0;
   right: 0;
   padding: 10px;
+  background-color: white;
+  box-shadow: 0 -10px 60px white;
   textarea {
     resize: none;
     height: 80px;
